# Qt-custom-gauge-widget

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/Arch/: ArchGauge.cpp  ArchGauge.h  ArchGauge.ui  CMakeLists.txt  main.cpp
examples/AttitudeMeter/: CMakeLists.txt
examples/BarGauge/: CMakeLists.txt  bargauge.cpp  bargauge.h  bargauge.ui  main.cpp
examples/Basic/: CMakeLists.txt  mainwindow.cpp
examples/Button/: Button.pro  Button.qss  CMakeLists.txt  button.cpp  button.h  button.ui  customButton.qrc  main.cpp
examples/CircularBar/: CMakeLists.txt  qcircularbar.cpp  qcircularbar.h
examples/Compass/: CMakeLists.txt  mainwindow.cpp
examples/DoubleNeedle/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/FuelGauge/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/LcdGauge/: CMakeLists.txt  lcd.cpp  lcd.h  lcd.ui  main.cpp
examples/ProgressGauge/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RoundGaugeGraphicsObject.cpp  RoundGaugeGraphicsObject.h
examples/RollGauge/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/SpeedGauge/: CMakeLists.txt
examples/SwicthWidget/: CMakeLists.txt  SwicthWidget.pro  SwicthWidget.qrc  SwitchWidget.qss  main.cpp  switchwidget.cpp  switchwidget.h  switchwidget.ui
examples/ToggleButton/: CMakeLists.txt  main.cpp  togglebutton.cpp  togglebutton.h  togglebutton.ui
examples/ToggleSwitch/: CMakeLists.txt  main.cpp  switchbutton.cpp  switchbutton.h
examples/VerticalBarGauge/: CMakeLists.txt  VerticaBarGauge.cpp  VerticaBarGauge.h  main.cpp  verticalbargauge.cpp  verticalbargauge.h  verticalbargauge.ui
examples/WindGauge/: CMakeLists.txt  WindGauge.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/include/: qcgaugewidget.h
lib/src/: qcgaugewidget.cpp
