add_subdirectory(AttitudeMeter)
add_subdirectory(Arch)
add_subdirectory(BarGauge)
add_subdirectory(Basic)
add_subdirectory(Compass)
add_subdirectory(DoubleNeedle)
add_subdirectory(FuelGauge)
add_subdirectory(LcdGauge)
add_subdirectory(RollGauge)
add_subdirectory(SpeedGauge)
add_subdirectory(VerticalBarGauge)
add_subdirectory(WindGauge)
